# mouse-battery-widget

./: .gitignore  CLAUDE.md  Justfile  MouseBatterySettings.qml  MouseBatteryWidget.qml  README.md  REUSE.toml  plugin.json  prek.toml  pyproject.toml
.config/: biome.jsonc  qmlformat.ini  rumdl.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: verify.yml
qml/: MouseBatterySettings.qml  MouseBatteryViewModel.qml  MouseBatteryWidget.qml  tst_MouseBatteryViewModel.qml
src/: harness.py  lint_qml.py  probe.qml  qml_test_bridge.py  qml_test_main.py  qml_tooling.py  qs_common_fake.py  test_mouse_battery.py  upower_fake.py  upower_mock.py  upower_service.py
src/mock/: __init__.py  mod.just  serve.py
src/mock/preview/: MockPluginService.qml  shell.qml
src/qml/: MouseBatteryDaemon.qml  MouseBatteryHorizontalPill.qml  MouseBatteryPopout.qml  MouseBatterySettings.qml  MouseBatteryStartupCheck.qml  MouseBatteryVerticalPill.qml  MouseBatteryViewModel.qml  MouseBatteryWidget.qml  qmldir  tst_MouseBatteryViewModel.qml  tst_MouseBatteryViewModelBar.qml  tst_MouseBatteryViewModelNotification.qml
src/qml/logic/: MouseBatteryDefaults.qml  MouseBatteryDevices.qml  MouseBatteryMonitor.qml  MouseBatteryViewModel.qml  qmldir  tst_MouseBatteryMonitor.qml  tst_MouseBatteryStartupCheck.qml  tst_MouseBatteryViewModel.qml  tst_MouseBatteryViewModelBar.qml
src/qml/views/: MouseBatteryHorizontalPill.qml  MouseBatteryPopout.qml  MouseBatteryVerticalPill.qml  qmldir
