# SPDX-FileCopyrightText: Elias Mueller
#
# SPDX-License-Identifier: MIT

[project]
name = "mouse-battery-widget"
version = "1.0.0"
description = "Shows wireless mouse battery level in the bar"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "dbus-fast>=5.0.22",
    "prek>=0.4.9",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.pyrefly]
python-version = "3.14"
search-path = ["src"]

[tool.pyrefly.errors]
missing-override-decorator = "error"

# dbus-fast requires D-Bus signature strings as annotations
[[tool.pyrefly.sub-config]]
matches = "src/upower_service.py"

[tool.pyrefly.sub-config.errors]
unknown-name = false

# dbus-fast requires D-Bus signature strings as annotations
[[tool.pyrefly.sub-config]]
matches = "src/mock/serve.py"

[tool.pyrefly.sub-config.errors]
unknown-name = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
extend-select = [
    "F",           # Pyflakes – basic errors like unused imports, undefined names
    "FLY",         # Flynt – suggests f-string conversion
    "FURB",        # Refurb – style suggestions from the `refurb` tool
    "I",           # Isort – enforces import sorting
    "PERF",        # Performance – flags suboptimal code patterns
    "PGH",         # Pygrep-hooks – enforces commit hook conventions (if any)
    "PL",          # Pylint – a broad range of static analysis rules
    "RUF",         # Ruff-specific – catches issues unique to ruff (e.g. mutable ClassVar, Optional vs X | Y)
    "S",           # Bandit – security issues (e.g. eval, subprocess, etc.)
    "UP",          # Upgrade – flags code that could use newer Python features

    # flake8
    "A",           # Builtins – flags variable/argument names that shadow Python builtins
    "ANN",         # Annotations – checks for missing type annotations on arguments and return types
    "ARG",         # Unused Arguments – flags unused function arguments
    "B",           # Bugbear – finds common bugs and design problems (mutable defaults, missing raise-from, etc.)
    "C",           # Cyclomatic complexity (mccabe) – flags overly complex code
    "CPY",         # Copyright – checks for required copyright notices
    "DTZ",         # datetime-timezone – flags naive datetime usage
    "EM",          # Error Messages – ensures proper string formatting in exception messages
    "EXE",         # Executable – checks for shebangs and file permissions
    "FA",          # Future Annotations – flags issues with postponed evaluation of annotations
    "FIX",         # Fixme – flags TODO, FIXME, and similar comments
    "G",           # Logging – ensures proper usage of logging practices
    "ICN",         # Import Conventions – checks for naming and import rules
    "INP",         # No PEP 420 – flags implicit namespace packages (missing __init__.py)
    "ISC",         # Implicit String Concatenation – disallows adjacent string literals without +
    "LOG",         # Logging Format – flags improper logging string formatting
    "PIE",         # Pie – miscellaneous Python code style improvements
    "PT",          # Pytest – checks for pytest best practices
    "PTH",         # Pathlib – encourages use of `pathlib` over `os.path`
    "PYI",         # Pyi – rules for stub (`.pyi`) files
    "Q",           # Quotes – enforces consistent quote style
    "RET",         # Return – flags redundant or inconsistent return statements
    "RSE",         # Raise – flags incorrect `raise` statements
    "SIM",         # Simplify – flags code that can be simplified
    "SLF",         # Self – restricts access to private members
    "SLOT",        # Slots – enforces use of `__slots__` where appropriate
    "T10",         # Debugger – flags debugger imports and breakpoint() calls
    "T20",         # Print – flags print() statements
    "TC",          # Type-checking – ensures proper usage of `TYPE_CHECKING` blocks
    "TD",          # TODO – flags TODO comments with optional enforcement
    "TID",         # Tidiness – general code tidiness rules
    "YTT",         # flake8-2020 – flags incorrect sys.version comparisons
]

[tool.ruff.lint.extend-per-file-ignores]
"**/upower_service.py" = [
    "ANN",                  # dbus-fast requires D-Bus signature strings as annotations
    "F821",                 # D-Bus signature strings look like undefined names
    "PLR6301",              # dbus-fast requires instance methods on service interfaces
    "UP037",                # The signature strings must stay quoted strings at runtime
]

"**/harness.py" = [
    "S404",          # Spawning subprocesses is the harness's job
    "S603",
    "S607",
]

"**/lint_qml.py" = [
    "S404",           # Spawning qmllint is the script's job
    "S603",
]

"**/mock/serve.py" = [
    "ANN",              # dbus-fast requires D-Bus signature strings as annotations
    "F821",             # D-Bus signature strings look like undefined names
    "PLR6301",          # dbus-fast requires instance methods on service interfaces
    "UP037",            # The signature strings must stay quoted strings at runtime
    "S404",             # Spawning subprocesses is the mock's job
    "S603",
    "S607",
]

"**/test_*.py" = [
    "ARG",          # Fixture parameters look like unused arguments
    "S101",         # Tests are built on `assert`
]

[tool.ruff.lint.isort]
known-first-party = ["harness", "qml_tooling", "upower_service"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "SPDX-FileCopyrightText: Elias Mueller"
